SERVER-73822 Time-series $group rewrite ignores certain accumulators

(cherry picked from commit f9fd648140b48de6af36f1b96bd66b5b54d5deb7)
(cherry picked from commit c7f9aac258688e06e07919d713d919cd58e9125c)