src/mongo/db/pipeline/document_source_internal_unpack_bucket.cpp
@@ -792,6 +792,8 @@ DocumentSourceInternalUnpackBucket::rewriteGroupByMinMax(Pipeline::SourceContain
             AccumulationExpression accExpr = stmt.expr;
             accExpr.argument = newExpr;
             accumulationStatements.emplace_back(stmt.fieldName, std::move(accExpr));
+        } else {
+            return {};
         }
     }
 
